--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>泰安產物官網</span><span style="font-size:14px;">(工作專案)</span><br /><span style="font-size:14px;">UI物件和投保流程規劃</span></div>
+                            <div class="works_item_bar"><span>泰安產物官網</span><span style="font-size:14px;">(工作專案)</span><br /><span style="font-size:14px;">流程規劃、視覺設計</span></div>
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,10 @@
                                 <div class="works_item_pic"><img id="t2_4" src="image/a7s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>裕隆員工福利系統</span><span style="font-size:14px;">(工作專案)</span></div>
+                                <div class="works_item_bar">
+                                    <span>裕隆員工福利系統</span><span style="font-size:14px;">(工作專案)</span><br/>
+                                    <span style="font-size:14px;">視覺設計</span>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -270,7 +273,10 @@
                                 <div class="works_item_pic"><img id="t2_5" src="image/a6s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>註冊開戶流程</span><span style="font-size:14px;">(工作專案)</span></div>
+                                <div class="works_item_bar">
+                                    <span>註冊開戶流程</span><span style="font-size:14px;">(工作專案)</span><br/>
+                                    <span style="font-size:14px;">視覺設計、流程規劃</span>
+                                </div>
                             </div>
                         </a>
                     </div>
