--- a/website/cath/page.html
+++ b/website/cath/page.html
@@ -82,22 +82,31 @@
             </picture>
         </div>
         <div class="pic_container">
-            <div class="title">整理使用者APP功能需求</div>
+            <picture>
+                <img src="image/p5_5.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <picture>
+                <img src="image/p5_6.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <div class="title">整理使用者APP功能需求比重</div>
             <picture>
                 <img src="image/p6.png">
             </picture>
         </div>
         <div class="pic_container">
-            <div class="title">進行架構(Functional Map)改善層級配置</div>
+            <div class="title" style="text-align:center;">依使用率進行架構層級安排，改善使用配置<br />(Functional Map)</div>
             <picture>
                 <img src="image/p7_1.png">
             </picture>
-            <picture>
-                <img src="image/p7_2.png">
-            </picture>
         </div>
         <div class="pic_container">
-            <div class="title">對於介面問題點，分析問題，進行解決</div>
+            <picture>
+                <img src="image/p5_7.png">
+            </picture>
             <picture>
                 <img src="image/p8_1.png">
             </picture>
@@ -107,12 +116,58 @@
             <picture>
                 <img src="image/p8_3.png">
             </picture>
+        </div>
+        <div class="pic_container">
+            <picture>
+                <img src="image/p5_8.png">
+            </picture>
             <picture>
                 <img src="image/p8_4.png">
             </picture>
         </div>
         <div class="pic_container">
-            <div class="title">進行流程圖&nbsp;<a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=279%3A412&mode=design&t=mt6i1dJl9wlvvsbc-1" target="_blank">Flow Chart</a>&nbsp;->&nbsp;<a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=318%3A974&mode=design&t=z8kr27Le6Qq4Rs6y-1" target="_blank">UI flow&nbsp;&amp;&nbsp;Wireflame</a></div>
+            <picture>
+                <img src="image/p5_9.png">
+            </picture>
+            <picture>
+                <img src="image/p8_5.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <picture>
+                <img src="image/p5_10.png">
+            </picture>
+            <picture>
+                <img src="image/p8_6.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <picture>
+                <img src="image/p5_11.png">
+            </picture>
+            <picture>
+                <img src="image/p8_7.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <picture>
+                <img src="image/p5_12.png">
+            </picture>
+            <picture>
+                <img src="image/p8_8.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <picture>
+                <img src="image/p5_13.png">
+            </picture>
+            <picture>
+                <img src="image/p8_9.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <div class="title">進行規劃APP流程圖</div>
+            <div class="title"><a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=279%3A412&mode=design&t=mt6i1dJl9wlvvsbc-1" target="_blank">Flow Chart</a>&nbsp;->&nbsp;<a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=318%3A974&mode=design&t=z8kr27Le6Qq4Rs6y-1" target="_blank">UI flow&nbsp;&amp;&nbsp;Wireflame</a></div>
             <div class="note">因架構龐大不利用圖檔展示<img src="image/sorry_icon.png" style="width:30px;box-shadow:none;">，可至figma空間連結瀏覽</div>
         </div>
         <div class="pic_container">
