--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>銀行APP redesign</span><br />
-                                    <span style="font-size:14px;color:#ffd452;">訪談整理、歸納問題、思考解決、製作架構和原型</span>
+                                    <span style="font-size:14px;color:#ffd452;">訪談整理、歸納痛點、思考解決、製作架構和原型</span>
                                 </div>
                             </div>
                         </a>
@@ -250,7 +250,7 @@
                                 <div class="works_item_pic"><img id="t2_3" src="image/a2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>社群APP設計</span><br /><span style="font-size:14px;color:#ffd452;">產品發想思維</span></div>
+                                <div class="works_item_bar"><span>社群APP設計</span><br /><span style="font-size:14px;color:#ffd452;">UI設計流程規劃</span></div>
                             </div>
                         </a>
                     </div>
