--- a/website/cath/page.html
+++ b/website/cath/page.html
@@ -28,6 +28,10 @@
 
     <div class="main">
         <div class="pic_container">
+            <div class="title" style="text-align:center;">
+                <span>明白實際專案還需考量跨部門整合、評估可行性和開發成本<br/><br/><span style="color:#ff0000;">此Redesign單純展示，身為UI設計師<br/>針對訪談需求的UI製作流程和視覺呈現的能力</span></span></div>
+        </div>
+        <div class="pic_container">
             <div class="title">從各年齡層、職業類型、年收入、性別，尋找4位銀行APP的使用者進行訪談，並整理以下資料</div>
         </div>
         <div class="pic_container">
