--- a/website/money_mine_page/page_ui.html
+++ b/website/money_mine_page/page_ui.html
@@ -28,8 +28,7 @@
         <div class="page_main_container">
             <div class="page_main_content">
                 <div class="page_main_title">
-                    <div>股票投資APP</div>
-                    <div>UI設計</div>
+                    <div>根據產品發想<br/><span style="color:#ff0000;">展示UI視覺設計能力和UX應用</span></div>
                 </div>
                 <div class="page_main_note">共17頁</div>
             </div>
@@ -93,7 +92,7 @@
                     股票市場有如一座高聳礦山，幫助使用者挖掘屬於自己的財富寶礦，以這樣概念取名Money Mine財礦。除了完整專業的選股指標和股市資訊，<span style="color:#e51515;">設置管道和機制幫助使用者提升股票投資的觀念，不只鎖定35歲以上的主要客群，更能拓展20、30歲的入門者成為使用者。</span>
                 </div>
                 <div class="page_main_text">
-                    優化介面操作、創新機制，提供客製化服務，打破傳統看盤軟體的單調模式，絕對是投資使用者的最佳選擇。
+                    優化介面操作、創新機制，提供客製化服務，打破傳統看盤軟體的單調模式，希望是投資使用者的最佳選擇。
                 </div>
             </div>
         </div>
@@ -677,6 +676,7 @@
             $(".choice_btn_area").addClass("open_choice_class");
         });
     });
+
 </script>
 <script>
     $(document).ready(function() {
@@ -685,5 +685,7 @@
             $(".choice_btn_area").removeClass("open_choice_class");
         });
     });
+
 </script>
+
 </html>
