--- a/website/funtogo2021/page.html
+++ b/website/funtogo2021/page.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-
+<div class="page_container"><picture><img src="image/p0_1920.jpg" alt=""/></picture></div>
 <div class="page_container"><picture><img src="image/p1_1920.jpg" alt=""/></picture></div>
 <div class="page_container"><picture><img src="image/p2_1920.jpg" alt=""/></picture></div>
 <div class="page_container"><picture><img src="image/p3_1920.jpg" alt=""/></picture></div>
