--- a/website/cath/page.html
+++ b/website/cath/page.html
@@ -23,13 +23,15 @@
         <div class="nav_btn">
             <a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=279%3A412&mode=design&t=mt6i1dJl9wlvvsbc-1" target="_blank">Flow Chart</a>
             <a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=318%3A974&mode=design&t=z8kr27Le6Qq4Rs6y-1" target="_blank">UI flow&nbsp;&amp;&nbsp;Wireflame</a>
+            <a href="#mockup">原型圖</a>
         </div>
     </div>
 
     <div class="main">
         <div class="pic_container">
             <div class="title" style="text-align:center;">
-                <span>明白實際專案還需考量跨部門整合、評估可行性和開發成本<br/><br/><span style="color:#ff0000;">此Redesign單純展示，身為UI設計師<br/>針對訪談需求的UI製作流程和視覺呈現的能力</span></span></div>
+                <span>明白實際專案還需考量跨部門整合、評估可行性和開發成本<br /><br /><span style="color:#ff0000;">此Redesign單純展示，身為UI設計師<br />針對訪談需求的UI製作流程和視覺呈現的能力</span></span>
+            </div>
         </div>
         <div class="pic_container">
             <div class="title">從各年齡層、職業類型、年收入、性別，尋找4位銀行APP的使用者進行訪談，並整理以下資料</div>
@@ -174,7 +176,7 @@
             <div class="title"><a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=279%3A412&mode=design&t=mt6i1dJl9wlvvsbc-1" target="_blank">Flow Chart</a>&nbsp;->&nbsp;<a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=318%3A974&mode=design&t=z8kr27Le6Qq4Rs6y-1" target="_blank">UI flow&nbsp;&amp;&nbsp;Wireflame</a></div>
             <div class="note">因架構龐大不利用圖檔展示<img src="image/sorry_icon.png" style="width:30px;box-shadow:none;">，可至figma空間連結瀏覽</div>
         </div>
-        <div class="pic_container">
+        <div id="mockup" class="pic_container">
             <div class="title" style="margin-bottom:10px;">原型圖(Mock up)</div>
             <div class="note" style="margin-bottom:20px;">至figma瀏覽部分<a href="https://www.figma.com/proto/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=765-22367&t=8NPRkqKGxaQKFtOf-0&scaling=min-zoom&page-id=279%3A413&starting-point-node-id=765%3A22367&show-proto-sidebar=1" target="_blank">原型展示(Prototype)</a></div>
             <div class="mockip_pic_group">
