--- a/website/cath/page.html
+++ b/website/cath/page.html
@@ -30,7 +30,7 @@
     <div class="main">
         <div class="pic_container">
             <div class="title" style="text-align:center;">
-                <span>明白實際專案還需考量跨部門整合、評估可行性和開發成本<br /><br /><span style="color:#ff0000;">此Redesign單純展示，身為UI設計師<br />針對訪談需求的UI製作流程和視覺呈現的能力</span></span>
+                <span>明白實際專案還需考量跨部門整合、評估可行性和開發成本<br /><br /><span style="color:#ff0000;">此Redesign主要展示，身為UI設計師<br />針對訪談需求的UI製作流程和視覺呈現的能力</span></span>
             </div>
         </div>
         <div class="pic_container">
