--- a/website/sino/page.html
+++ b/website/sino/page.html
@@ -28,6 +28,19 @@
     </div>
 
     <div class="main">
+        <div class="text_container">
+            <div class="title">介紹</div>
+            <div class="note" style="margin-bottom:20px;">
+                永豐銀行藉由代理各家保險業者的保險方案，推出自家平台<span style="font-weight:bold;">引導使用者進行保險查閱和投保流程</span>
+            </div>
+            <div class="note" style="margin-bottom:20px;">
+                <span>網站配色<span style="font-weight:bold;">依永豐銀行LOGO色調</span>進行設計，連結品牌精神和形象，同時識別企業歸屬。</span>
+            </div>
+            <div class="note" style="margin-bottom:20px;">
+                <span>風格依客戶需求，對於平台提供的保險服務<span style="font-weight:bold;">希望能帶給使用者活潑、豐富、親切的氛圍</span>，所以背景不用單一白色，而以淡藍淺灰做交互搭配，能給予視覺豐富度同時顧及舒適感，
+                    並少量搭配飽和度高的色彩做資訊重點提示和可愛的插畫風格元素，呈現客戶所要求活潑親切的氛圍。</span>
+            </div>
+        </div>
         <div class="pic_container">
             <div class="title">首頁</div>
             <picture>
