--- a/website/yuan/page.html
+++ b/website/yuan/page.html
@@ -20,6 +20,18 @@
     </div>
 
     <div class="main">
+        <div class="text_container">
+            <div class="title">介紹</div>
+            <div class="note" style="margin-bottom:20px;">
+                元大期貨底下的槓桿交易部分，主要商品服務有期貨、外幣之衍生槓桿商品交易服務，其槓桿交易部門管理的商品資訊，希望脫離元大期貨官網，獨立成一個專屬的產品官網。
+            </div>
+            <div class="note" style="margin-bottom:20px;">
+                <span>網站配色依元大集團LOGO藍色加上與搭配商品類型(外幣、期貨買賣)金色進行設計。</span>
+            </div>
+            <div class="note" style="margin-bottom:20px;">
+                <span>客戶期望風格，因商品類型關係<span style="font-weight:bold">希望能有科技感和專業度</span>，但因服務客戶相關<span style="font-weight:bold">又不想太過嚴肅，希望有親切感</span>，因此除了使用LOGO藍色與白色背景之外，<span style="font-weight:bold">搭配深灰深藍色呈現科技專業感，同時和商品形象的金色(暖色=親切感)</span>產生良好的對比搭配，搭配<span style="font-weight:bold">2.5D(isometric)風格的彩度高的可愛配圖</span>，呈現科技感又不失親切，搭配精緻雙色icon設計，整體感覺客戶非常滿意，也<span style="font-weight:bold">成為提案得標的關鍵因素。</span></span>
+            </div>
+        </div>
         <div class="pic_container">
             <div class="title">首頁</div>
             <picture>
