--- a/index.html
+++ b/index.html
@@ -209,12 +209,14 @@
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <div id="p17" class="works_item item_show_pic_2" role="button">
-                            <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
-                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
-                            </div>
+                        <a href="website/tai/page.html" target="_blank" role="button">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t1_4" src="image/p17s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
                             <div class="works_item_bar"><span>泰安產物官網</span><span style="font-size:14px;">(工作專案)</span><br /><span style="font-size:14px;">流程規劃、視覺設計</span></div>
-                        </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
