--- a/website/tai/page.html
+++ b/website/tai/page.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="shoutcut icon" href="image/favicon-jw.ico" />
-    <title>永豐網路投保網站專案</title>
+    <title>泰安產物保險專案</title>
     <link href="css/page.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 </head>
