--- a/website/tai/page.html
+++ b/website/tai/page.html
@@ -24,7 +24,7 @@
             </div>
             <div class="note" style="margin-bottom:20px;">
                 <span>風格依客戶需求，<span style="font-weight:bold;">希望有簡約時尚的感覺，所以使用手繪感的線條素材作為主視覺，搭配線框風格的icon圖示，除了必要的操作提示(按鈕、文字連結)使用飽和度較高色彩，整體以較低飽和度色彩進行搭配</span>，以達到客戶要的簡約時尚感<br />
-                對於投保頁面和透過PM整理客戶需求，進行流程規劃、優化版面(含RWD)，目前已進行5類險種(汽車、機車、防疫、旅遊、二輪車)的改版。</span>
+                    對於投保頁面和透過PM整理客戶需求，進行流程規劃、優化版面(含RWD)，目前已進行5類險種(汽車、機車、防疫、旅遊、二輪車)的改版。</span>
             </div>
         </div>
         <div class="pic_container">
@@ -36,11 +36,14 @@
         <div class="pic_container">
             <div class="title">商品頁(旅平險)</div>
             <picture>
-                <img src="image/p2.png">
+                <img src="image/p1-2.png">
             </picture>
         </div>
         <div class="pic_container">
             <div class="title">投保流程</div>
+            <picture>
+                <img src="image/p2.png">
+            </picture>
             <picture>
                 <img src="image/p3.png">
             </picture>
