--- a/website/yulon/page.html
+++ b/website/yulon/page.html
@@ -15,7 +15,7 @@
 
     <div class="main">
         <div class="pic_container">
-            <div class="title">提案前期-風格提版</div>
+            <div class="title">提案前期-提供三款風格提版</div>
             <div class="title">採用CIS LOGO配色</div>
             <div class="mockip_pic_group">
                 <div class="mockip_pic"><img src="image/logo.jpg"></div>
@@ -40,6 +40,26 @@
             <div class="mockip_pic_group">
                 <div class="mockip_pic"><img src="image/c1.png"></div>
                 <div class="mockip_pic"><img src="image/c2.png"></div>
+            </div>
+        </div>
+        <div class="pic_container">
+            <div class="title">第一次會議</div>
+            <div class="note" style="margin-bottom:20px;">
+                <span>客戶選擇第三版風格，但希望LOGO使用紅黃版本，登入介面想簡約些(不要放照片)</span>
+            </div>
+        </div>
+        <div class="pic_container">
+            <div class="title">第一次會議的反饋進行修改</div>
+            <div class="note" style="margin-bottom:20px;line-height:1.5;">
+                <span>改以網路系統平台為發想(互聯網、科技)做視覺元素的搭配，<br/>素材盡量簡約並提供兩版選擇，運用LOGO紅黃版本進行介面配色</span>
+            </div>
+            <div class="mockip_pic_group">
+                <div class="mockip_pic"><img src="image/d1.png"></div>
+                <div class="mockip_pic"><img src="image/d3.png"></div>
+            </div>
+            <div class="mockip_pic_group">
+                <div class="mockip_pic"><img src="image/d2.png"></div>
+                <div class="mockip_pic"><img src="image/d3.png"></div>
             </div>
         </div>
         <div class="pic_container">
