--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>裕隆員工福利系統</span><span style="font-size:14px;">(工作專案)</span><br />
-                                    <span style="font-size:14px;">視覺設計</span>
+                                    <span style="font-size:14px;">UI視覺設計</span>
                                 </div>
                             </div>
                         </a>
