--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                             <div class="works_item_pic"><img id="t5_1" src="image/s16s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>AI繪圖應用</span></div>
+                            <div class="works_item_bar"><span>AI繪圖應用</span><span style="font-size:14px;">(外包接案)</span></div>
                         </div>
                     </div>
                     <div class="works_item_container">
