--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                 <div class="works_item_bar">
                                     <span>元大期貨官網</span>
                                     <span style="font-size:14px;">(工作專案)</span><br />
-                                    <span style="font-size:14px;">提案得標、視覺設計</span>
+                                    <span style="font-size:14px;color:#ffd452;">提案得標</span><span style="font-size:14px;">、視覺設計</span>
                                 </div>
                             </div>
                         </a>
@@ -203,7 +203,7 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>元大期貨官網</span><span style="font-size:14px;">(提案)</span><br /><span style="font-size:14px;">視覺和互動應用</span>
+                                    <span>元大期貨官網</span><span style="font-size:14px;">(提案)</span><br /><span style="font-size:14px;">視覺設計、元件動畫</span>
                                 </div>
                             </div>
                         </a>
@@ -244,7 +244,7 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>裕隆員工福利系統</span><span style="font-size:14px;">(工作專案)</span><br />
-                                    <span style="font-size:14px;">UI視覺設計</span>
+                                    <span style="font-size:14px;color:#ffd452;">UI視覺設計</span>
                                 </div>
                             </div>
                         </a>
@@ -255,7 +255,7 @@
                                 <div class="works_item_pic"><img id="t2_2" src="image/a1-2s.png" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>股票APP</span><br /><span style="font-size:14px;color:#ffd452;">UI設計、UX應用</span></div>
+                                <div class="works_item_bar"><span>股票APP</span><br /><span style="font-size:14px;">產品發想、UI設計、UX應用</span></div>
                             </div>
                         </a>
                     </div>
@@ -265,7 +265,7 @@
                                 <div class="works_item_pic"><img id="t2_3" src="image/a2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>社群APP設計</span><br /><span style="font-size:14px;color:#ffd452;">UI設計、流程規劃</span></div>
+                                <div class="works_item_bar"><span>旅遊社群APP</span><br /><span style="font-size:14px;">產品發想、UI設計、流程規劃</span></div>
                             </div>
                         </a>
                     </div>
@@ -277,7 +277,7 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>註冊開戶流程</span><span style="font-size:14px;">(工作專案)</span><br />
-                                    <span style="font-size:14px;">視覺設計、流程規劃</span>
+                                    <span style="font-size:14px;">UI設計、流程規劃</span>
                                 </div>
                             </div>
                         </a>
@@ -295,7 +295,7 @@
                                 <div class="works_item_bar">
                                     <span>泰安產物活動網頁</span><span style="font-size:14px;">(工作專案)</span>
                                     <br />
-                                    <span style="font-size:14px;">(含RWD切版)</span>
+                                    <span style="font-size:14px;">視覺設計、RWD切版</span>
                                 </div>
                             </div>
                         </a>
@@ -309,7 +309,7 @@
                                 <div class="works_item_bar">
                                     <span>一頁式宣傳網頁</span><span style="font-size:14px;">(外包接案)</span>
                                     <br />
-                                    <span style="font-size:14px;">(含RWD切版)</span>
+                                    <span style="font-size:14px;">視覺設計、RWD切版</span>
                                 </div>
                             </div>
                         </a>
