--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                     <div class="works_item_note"><span>推薦</span></div>
                                 </div>
                                 <div class="works_item_bar">
-                                    <span>銀行APP redesign</span><br />
+                                    <span>銀行APP redesign</span>&nbsp;<span style="font-size:14px;">(side project)</span><br />
                                     <span style="font-size:14px;color:#ffd452;">訪談整理、歸納痛點、思考解決、製作架構和介面原型</span>
                                 </div>
                             </div>
@@ -244,7 +244,7 @@
                                 </div>
                                 <div class="works_item_bar">
                                     <span>裕隆員工福利系統</span><span style="font-size:14px;">(工作專案)</span><br />
-                                    <span style="font-size:14px;color:#ffd452;">UI視覺設計</span>
+                                    <span style="font-size:14px;color:#ffd452;">UI設計</span>
                                 </div>
                             </div>
                         </a>
@@ -255,7 +255,7 @@
                                 <div class="works_item_pic"><img id="t2_2" src="image/a1-2s.png" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>股票APP</span><br /><span style="font-size:14px;">產品發想、UI設計、UX應用</span></div>
+                                <div class="works_item_bar"><span>股票APP</span>&nbsp;<span style="font-size:14px;">(side project)</span><br /><span style="font-size:14px;">產品發想、UI設計、UX應用</span></div>
                             </div>
                         </a>
                     </div>
@@ -265,20 +265,7 @@
                                 <div class="works_item_pic"><img id="t2_3" src="image/a2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>旅遊社群APP</span><br /><span style="font-size:14px;">產品發想、UI設計、流程規劃</span></div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_item_container">
-                        <a href="website/cnyes/page.html" target="_blank">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t2_5" src="image/a6s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar">
-                                    <span>註冊開戶流程</span><span style="font-size:14px;">(工作專案)</span><br />
-                                    <span style="font-size:14px;">UI設計、流程規劃</span>
-                                </div>
+                                <div class="works_item_bar"><span>旅遊社群APP</span>&nbsp;<span style="font-size:14px;">(side project)</span><br /><span style="font-size:14px;">產品發想、UI設計</span></div>
                             </div>
                         </a>
                     </div>
