--- a/website/cath/page.html
+++ b/website/cath/page.html
@@ -29,12 +29,31 @@
 
     <div class="main">
         <div class="pic_container">
-            <div class="title" style="text-align:center;">
-                <span>明白實際專案還需考量跨部門整合、評估可行性和開發成本<br /><br /><span style="color:#ff0000;">此Redesign主要展示，身為UI設計師<br />針對訪談需求的UI製作流程和視覺呈現的能力</span></span>
-            </div>
+            <div class="title">定義招募受訪者</div>
+            <picture>
+                <img src="image/p0_1.png">
+            </picture>
         </div>
         <div class="pic_container">
-            <div class="title">從各年齡層、職業類型、年收入、性別，尋找4位銀行APP的使用者進行訪談，並整理以下資料</div>
+            <div class="title">製作招募受訪問券</div>
+            <picture>
+                <img src="image/p0_2.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <div class="title">確立訪談目標</div>
+            <picture>
+                <img src="image/p0_3.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <div class="title">訂定訪談綱要</div>
+            <picture>
+                <img src="image/p0_4.png">
+            </picture>
+        </div>
+        <div class="pic_container">
+            <div class="title">從各年齡層、職業類型、年收入、性別，尋找4位符合條件的使用者進行訪談，並整理以下資料</div>
         </div>
         <div class="pic_container">
             <div class="title">人物誌persona 陳先生 35歲上班族</div>
