--- a/website/yulon/page.html
+++ b/website/yulon/page.html
@@ -18,7 +18,7 @@
             <div class="title">提案前期-提供三款風格提版</div>
             <div class="title">採用CIS LOGO配色</div>
             <div class="mockip_pic_group">
-                <div class="mockip_pic"><img src="image/logo.jpg"></div>
+                <div class="mockip_pic"><img src="image/logo.jpg" style="box-shadow:none;"></div>
             </div>
         </div>
         <div class="pic_container">
