--- a/website/cath/page.html
+++ b/website/cath/page.html
@@ -29,6 +29,9 @@
 
     <div class="main">
         <div class="pic_container">
+            <div class="title">展示對於產品專案開發流程，所具備的能力和觀念</div>
+        </div>
+        <div class="pic_container">
             <div class="title">定義招募受訪者</div>
             <picture>
                 <img src="image/p0_1.png">
@@ -195,13 +198,25 @@
             <div class="title"><a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=279%3A412&mode=design&t=mt6i1dJl9wlvvsbc-1" target="_blank">Flow Chart</a>&nbsp;->&nbsp;<a href="https://www.figma.com/file/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=318%3A974&mode=design&t=z8kr27Le6Qq4Rs6y-1" target="_blank">UI flow&nbsp;&amp;&nbsp;Wireflame</a></div>
             <div class="note">因架構龐大不利用圖檔展示<img src="image/sorry_icon.png" style="width:30px;box-shadow:none;">，可至figma空間連結瀏覽</div>
         </div>
-        <div id="mockup" class="pic_container">
+        <div id="mockup" class="text_container">
             <div class="title" style="margin-bottom:10px;">原型圖(Mock up)</div>
-            <div class="note" style="margin-bottom:20px;">至figma瀏覽部分<a href="https://www.figma.com/proto/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=765-22367&t=8NPRkqKGxaQKFtOf-0&scaling=min-zoom&page-id=279%3A413&starting-point-node-id=765%3A22367&show-proto-sidebar=1" target="_blank">原型展示(Prototype)</a></div>
-            <div class="mockip_pic_group">
+            <div class="note" style="margin-bottom:20px;">
+                <span>依國泰世華銀行LOGO黃綠進行配色；
+                    介面中以綠色做重點資訊提示色，而功能按鈕以綠色(主色)、功能文字以藍色(連結慣用色)作為提示，應用圖示icon增加提示和漸少文字使用，提升介面美觀；
+                    版面注重功能主次依序配置和所佔版面，標題文字依資訊重要程度決定大小順序；資料圖像化提高閱讀性。
+                </span>
+            </div>
+            <div class="note">至figma瀏覽部分<a href="https://www.figma.com/proto/ediIjk708H4uRRFw6GBVTf/%E9%8A%80%E8%A1%8CAPP-redesign?type=design&node-id=765-22367&t=8NPRkqKGxaQKFtOf-0&scaling=min-zoom&page-id=279%3A413&starting-point-node-id=765%3A22367&show-proto-sidebar=1" target="_blank">原型展示(Prototype)</a></div>
+        </div>
+        <div class="pic_container">
+            <div class="mockip_pic_group" style="justify-content:center;">
                 <div class="mockip_pic"><img src="image/p9_1.png"></div>
-                <div class="mockip_pic"><img src="image/p9_2.png"></div>
-                <div class="mockip_pic"><img src="image/p9_3.png"></div>
+            </div>
+            <div class="mockip_pic_group" style="justify-content:center;">
+                <div class="mockip_pic"><img src="image/p9_10.png"></div>
+                <div class="mockip_pic"><img src="image/p9_11.png"></div>
+            </div>
+            <div class="mockip_pic_group">
                 <div class="mockip_pic"><img src="image/p9_4.png"></div>
                 <div class="mockip_pic"><img src="image/g1.gif"></div>
                 <div class="mockip_pic"><img src="image/p9_6.png"></div>
