--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
 
             <div class="page_list_item">
                 <div class="page_list_item_title" role="button">
-                    <span class="title">過往學習成果</span>
+                    <span class="title">外部專案</span>
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
                 <div class="page_list_item_page_choice" style="display:none;">
-                    <div><a href="#p13">UXD產品設計課程</a></div>
-                    <div><a href="#p14">UX研究實戰營</a></div>
+                    <div><a href="#p13">UXD課程&nbsp;健身場地預約系統</a></div>
+                    <div><a href="#p14">UX研究&nbsp;共享交通產品開發</a></div>
                 </div>
             </div>
 
@@ -305,17 +305,17 @@
                         </ul>
                     </div>
                     <div class="page_catalog_part">
-                        <div class="page_catalog_part_title h3">過往學習成果</div>
+                        <div class="page_catalog_part_title h3">外部專案</div>
                         <ul class="page_catalog_part_list">
                             <li>
-                                <div class="list_page_name">UXD產品設計課程</div>
+                                <div class="list_page_name">UXD課程&nbsp;健身場地預約系統</div>
                                 <div class="list_line"></div><a href="#p13" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">13</a>
                             </li>
                             <div class="list_note_container">
                                 <div class="list_note_tag">規劃能力：PRD文件→資訊架構→產品藍圖</div>
                             </div>
                             <li>
-                                <div class="list_page_name">UX研究實戰營</div>
+                                <div class="list_page_name">UX研究&nbsp;共享交通產品開發</div>
                                 <div class="list_line"></div><a href="#p14" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">14</a>
                             </li>
                             <div class="list_note_container">
@@ -916,7 +916,7 @@
                             <div class="work_info_subtext">
                                 進行需求訪談，依記錄規劃網站架構、使用流程和頁面布局，繪製成wireframe使開發上有所依據、對焦共識。
                             </div>
-                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>規劃內容展示</span></div>
+                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>規劃內容</span></div>
                             <div class="work_info_note" style="display:none;">
                                 <div><span>*</span>避免違反保密原則，故刪減業務邏輯、資安疑慮...等敏感資訊，只以概念說明內容規劃。</div>
                                 <div><span>*</span>了解完整產品規劃能力，可瀏覽<a href="#">UXD產品設計課程 成果展示</a>。</div>
@@ -929,7 +929,7 @@
                             <div class="work_info_subtext">
                                 Wireframe定案後，為整合出美觀易用且符合業務形象之網站平台，與需求方討論進行風格、配色、介面布局...等規劃，並產出mockup給予確認。
                             </div>
-                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計要點</span></div>
+                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計亮點</span></div>
                         </div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
@@ -1018,7 +1018,7 @@
                             <div class="work_info_subtext">
                                 專案以視覺風格(一)得標後，進行後續討論，完成網站全部頁面視覺稿。
                             </div>
-                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計要點</span></div>
+                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計亮點</span></div>
                         </div>
                     </div>
 
@@ -1109,7 +1109,7 @@
                                             Wireframe定案後，為整合出美觀且符合使用之APP，與需求方訪談後進行風格、配色、介面布局...等規劃，並產出mockup給予確認。
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計要點</span>
+                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計亮點</span>
                                         </div>
                                     </div>
                                 </div>
@@ -1138,7 +1138,7 @@
                                     Wireframe定案後，為整合出美觀易用且符合集團形象之APP，與需求方討論進行風格、配色、介面布局...等規劃，並產出mockup給予確認。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計要點</span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計亮點</span>
                                 </div>
                             </div>
                             <div class="work_info_subpart">
@@ -1247,7 +1247,7 @@
                                         <div class="work_info_subtext">
                                             視覺設計方向確認後，以需求方提供的簡易wirfeame，給予操作流程、介面配置的建議，討論後產出mockup。
                                         </div>
-                                        <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計要點</span></div>
+                                        <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計亮點</span></div>
                                     </div>
                                 </div>
                             </div>
@@ -1271,7 +1271,7 @@
                                 <div class="work_info_subtext">
                                     視覺設計方向確認後，以需求方提供的簡易wirfeame，給予操作流程、介面配置的建議，討論後產出mockup。
                                 </div>
-                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計要點</span></div>
+                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計規範、設計亮點</span></div>
                             </div>
                         </div>
 
@@ -1333,7 +1333,7 @@
                             <div class="work_info_subtext">
                                 需求方討論活動概念後，依資料項目設計視覺圖。
                             </div>
-                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計要點</span></div>
+                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺稿、設計亮點</span></div>
                         </div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
@@ -1376,11 +1376,11 @@
             <div class="page_title_img_container set_middle appear-animation" data-appear-animation="fadeInUp">
                 <div>
                     <div class="page_title_container">
-                        過往學習成果
+                        外部專案
                     </div>
                     <div class="page_subtitle_container h3 set_middle" style="margin-top:25px;">
                         <div>
-                            UXD產品設計課程
+                            UXD課程&nbsp;產品設計
                         </div>
                         <div>
                             <picture>
@@ -1389,7 +1389,7 @@
                             </picture>
                         </div>
                         <div>
-                            UX研究實戰營
+                            UX研究&nbsp;產品開發
                         </div>
                     </div>
                 </div>
@@ -1414,7 +1414,7 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">UXD產品設計課程</div>
+                    <div class="page_content_title_name">UXD課程&nbsp;健身場地預約系統</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
@@ -1424,10 +1424,10 @@
                         <div class="work_info_title h3 font_bold">展示緣由</div>
                         <div class="work_info_text">
                             <ul>
-                                <li>彌補工作專案因保密原則，無法完整說明產品規劃脈絡。</li>
-                                <li>講師有產品設計20年經驗，課程內容實用且成熟。</li>
-                                <li class="h5 font_bold">課程模擬專案，需考量3種不同的使用者，設計思維較有深度。</li>
-                                <li class="h5 font_bold">模擬專案為獨立作業，能完整呈現個人規劃能力。</li>
+                                <li>彌補工作專案因保密原則，無法完整說明產品規劃。</li>
+                                <li>講師20年產品設計經驗，課程內容實用且成熟。</li>
+                                <li class="h5 font_bold">模擬專案，需考量3種不同的使用者，設計思維較有深度。</li>
+                                <li class="h5 font_bold">獨立作業完整呈現個人規劃能力。</li>
                             </ul>
                         </div>
                     </div>
@@ -1440,7 +1440,7 @@
                     </div>
 
                     <div class="work_info_part" style="margin-bottom:0px;">
-                        <div class="work_info_title h3 font_bold">模擬專案</div>
+                        <div class="work_info_title h3 font_bold">專案介紹</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品規劃：
@@ -1487,7 +1487,11 @@
                             <div class="pup_link_area appear-animation" data-appear-animation="fadeInUp">
                                 <div class="pup_link_container font_bold"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>PRD、IA、頁面架構圖</span></div>
                                 <div class="pup_link_container font_bold"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>Wireframe規格內容</span></div>
-                                <div class="pup_link_container font_bold"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>規劃脈絡與設計說明</span></div>
+                            </div>
+                            <div class="pup_link_area">
+                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span>規劃脈絡、設計亮點</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1517,7 +1521,7 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">UX研究實戰營</div>
+                    <div class="page_content_title_name">UX研究&nbsp;共享交通產品開發</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
@@ -1527,9 +1531,8 @@
                         <div class="work_info_title h3 font_bold">展示緣由</div>
                         <div class="work_info_text">
                             <ul>
-                                <li>講師為業界UX顧問，研究方法全面且專業。</li>
-                                <li>講師僅給予檢核與建議，專案執行扎實轉為自身技能。</li>
-                                <li>真實UX專案，交付成果受委託方肯定。</li>
+                                <li>負責人為業界UX顧問，工作流程全面且專業。</li>
+                                <li>小組研究執行扎實，交付成果深受業主肯定。</li>
                                 <li class="h5 font_bold">定義議題到洞察價值，展現個人邏輯思維。</li>
                             </ul>
                         </div>
@@ -1577,7 +1580,12 @@
                                 --
                             </div>
                             <div class="pup_link_area">
-                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>研究過程簡報</span></div>
+                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span>研究過程簡報</span>
+                                </div>
+                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span>個人亮點</span>
+                                </div>
                             </div>
                         </div>
                     </div>
