--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
                                         <div class="work_info_subtext">
                                             進行需求訪談，依記錄規劃APP&amp;管理後台的使用和介面布局，繪製wireframe使專案開發有所依據、對焦共識。
                                         </div>
-                                        <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>規劃內容展示</span></div>
+                                        <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>規劃內容</span></div>
                                         <div class="work_info_note" style="display:none;">
                                             <div><span>*</span>避免違反保密原則，故刪減業務邏輯、資安疑慮的資訊，只以概念說明內容規劃。</div>
                                             <div><span>*</span>了解詳細產品規劃能力，可瀏覽<a href="#">UXD產品設計課程 成果展示</a>。</div>
@@ -1124,7 +1124,7 @@
                                 <div class="work_info_subtext">
                                     進行需求訪談，依記錄規劃APP&amp;管理後台的使用和介面布局，繪製wireframe使專案開發有所依據、對焦共識。
                                 </div>
-                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>規劃內容展示</span></div>
+                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>規劃內容</span></div>
                                 <div class="work_info_note" style="display:none;">
                                     <div><span>*</span>避免違反保密原則，故刪減業務邏輯、資安疑慮的資訊，只以概念說明內容規劃。</div>
                                     <div><span>*</span>了解詳細產品規劃能力，可瀏覽<a href="#">UXD產品設計課程 成果展示</a>。</div>
