--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
                                         <div class="work_info_subtext">
                                             歸類色彩意涵、形象風格、版面布局進行說明，於會議給予需求方參考，對焦視覺設計方向。
                                         </div>
-                                        <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺提案內容</span></div>
+                                        <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>提案內容</span></div>
                                     </div>
                                     <div class="work_info_subpart">
                                         <div class="work_info_subtitle h4 font_bold">
@@ -1262,7 +1262,7 @@
                                 <div class="work_info_subtext">
                                     歸類色彩意涵、形象風格、版面布局進行說明，於會議給予需求方參考對焦視覺設計方向。
                                 </div>
-                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>視覺提案內容</span></div>
+                                <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>提案內容</span></div>
                             </div>
                             <div class="work_info_subpart">
                                 <div class="work_info_subtitle h4 font_bold">
@@ -1342,7 +1342,7 @@
                             <div class="work_info_subtext">
                                 確認視覺圖後，進行前端切版製作初步原型。
                             </div>
-                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>行銷網頁原型(前端切版)</span></div>
+                            <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp"><img src="images/pup_link_dot.png" class="pup_link_dot"><span>原型展示(前端切版)</span></div>
                         </div>
                     </div>
 
